--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -84,7 +84,7 @@
                     <table id="lista-carrito" class="u-full-width">
                         <thead>
                             <tr>
-                                <th>Imagen</th>
+                                <th class="col-2">Imagen</th>
                                 <th>Nombre</th>
                                 <th>Precio</th>
                                 <th>Cantidad</th>
@@ -92,11 +92,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="producto in carrito">
-                                <td><img :src="producto.imagen" alt=""></td>
+                            <tr v-for="producto in carrito" class="text-center">
+                                <td><img class="w-50 h-50" :src="producto.imagen" alt=""></td>
                                 <td>{{producto.nombre}}</td>
                                 <td>{{producto.precio}}</td>
-                                <td></td>
+                                <td>{{producto.__v}}</td>
+                                <td><a @click.prevent="eliminarCarrito(producto)" href="#" class="borrar-producto">X</a></td>
                             </tr>
                         </tbody>
                     </table>
