--- a/PETSHOP FINAL/farmacia.html
+++ b/PETSHOP FINAL/farmacia.html
@@ -116,6 +116,35 @@
             <div class="p-2 rounded-3">
                 <h2 class="text-center text-white display-5 fw-bold">¡Jugueteria de Los Chicuelos!</h2>
             </div>
+            <div id="logoCarrito" class="submenu">
+                <a v-if="carrito.length==0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito.png" alt=""></a>
+                <a v-if="carrito.length!=0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito1.png" alt=""></a>
+                <div id="carrito">
+
+                    <table id="lista-carrito" class="u-full-width">
+                        <thead>
+                            <tr>
+                                <th class="col-2">Imagen</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="producto in carrito" class="text-center">
+                                <td><img class="w-50 h-50" :src="producto.imagen" alt=""></td>
+                                <td>{{producto.nombre}}</td>
+                                <td>{{producto.precio}}</td>
+                                <td>{{producto.__v}}</td>
+                                <td><a @click.prevent="eliminarCarrito(producto)" href="#" class="borrar-producto">X</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <a @click.prevent="vaciarCarrito()" href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                </div>
+            </div>
             <div v-if="buscador ==''" class="containe d-flex justify-content-center align-items-center flex-wrap gap-3 p-3 flex-column rounded-3" id="contenedorUltimos">
                 <div class="d-flex justify-content-center align-items-center flex-wrap gap-3">
                     <div v-for="producto in ultimosProductos" class="card border-verdeO" id="card" data-aos="zoom-out-up">
