--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -84,6 +84,37 @@
             <div v-if="buscador ==''" class="container-fluid p-0">
                 <img src="./assets/img/banner1.png" alt="" class="w-100">
             </div>
+            <div id="logoCarrito" class="submenu">
+                <a v-if="carrito.length==0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito.png" alt=""></a>
+                <a v-if="carrito.length!=0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito1.png" alt=""></a>
+                <div id="carrito">
+
+                    <table id="lista-carrito" class="u-full-width">
+                        <thead>
+                            <tr>
+                                <th class="col-2">Imagen</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="producto in carrito" class="text-center">
+                                <td><img class="w-50 h-50" :src="producto.imagen" alt=""></td>
+                                <td>{{producto.nombre}}</td>
+                                <td>{{producto.precio}}</td>
+                                <td>{{producto.__v}}</td>
+                                <td><a @click.prevent="eliminarCarrito(producto)" href="#" class="borrar-producto">X</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <a @click.prevent="vaciarCarrito()" href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                </div>
+            </div>
+            <div v-if="productos.length== 0 && productosBk.length!=0" class="contenedor d-flex justify-content-center">
+                <img class="w-25 h-25" src="./assets/img/perroBuscador.png" alt="">
+            </div>
             <div v-if="buscador ==''" class="container d-flex justify-content-center align-items-center flex-wrap gap-3 p-3 flex-column rounded-3" id="contenedorUltimos" data-aos="fade">
                 <img src="https://media4.giphy.com/media/Na3VeD6sxKwx9j1m2y/giphy.gif?cid=6c09b9523721ccfeed5fb36b442e7f774c4c56cedd3f7946&rid=giphy.gif&ct=s" alt="" style="position: relative;top:0;max-width: 15rem;z-index: 10;">
                 <div class="d-flex justify-content-center align-items-center flex-wrap gap-3" data-aos="fade">                    
@@ -102,7 +133,7 @@
                             <div class="d-flex justify-content-around align-content-center p-2">
                                 <h3>Stock:<span class="text-white">{{producto.stock}}</span></h3>
                                 <h3><span class="text-success">$</span>{{producto.precio}}</h3>
-                                <a href="#">
+                                <a @click.prevent="agregarCarrito(producto)" href="#">
                                     <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png" >
                                 </a>
                             </div>
@@ -184,6 +215,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./assets/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
